# sound_link

./: README.md  USAGE.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/devices/: audio.rs  mod.rs
src-tauri/src/router/: delay_buffer.rs  mod.rs  router.rs  volume_mixer.rs
src/components/: DeviceBall.vue
src/styles/: main.css
src/views/: MainView.vue  SettingsView.vue
