[package]
name = "sound-link"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
image = "0.25"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Media_Audio_Endpoints",
] }
scopeguard = "1.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
